Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22934

QRect autotest misuses QEXPECT_FAIL

    XMLWordPrintable

Details

    Description

      In tbase/tests/auto/corelib/tools/qrect/tst_qrect.cpp, the normalized() test function contains the following line:

          QEXPECT_FAIL("ZeroHeight1", "due to broken QRect definition (not possible to change)", Continue);
      

      QEXPECT_FAIL is provided for the purpose of documenting how a known bug affects test results and enabling the tests to continue to work until the known bug is fixed. The case above seems more like something that should be documented in class documentation, as it will never be fixed – in which case the test should be corrected to match the expected (but not necessarily optimal) behaviour.

      Attachments

        For Gerrit Dashboard: QTBUG-22934
        # Subject Branch Project Status CR V

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes