tests/auto/gui/painting/qpainter/tst_qpainter.cpp
@@ -815,7 +815,7 @@ void tst_QPainter::drawLine()
                           qMin(line.y1(), line.y2())
                           + 2*offset + qAbs(line.dy()));
     { // clipped
-        const QRect clip = QRect(line.p1(), line.p2()).normalized();
+        const QRect clip = QRect::span(line.p1(), line.p2());
 
         pixmapClipped.fill(Qt::white);
         QPainter p(&pixmapClipped);
